5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1630_2942.log
== TEST (2019-04-02 16:10:15) 
-- CODE:
#Quantidade de donuts
d = int(input("Quantidade de donuts: "))
ovo = 2/12
leite = 150
far = 120
a  = d * ovo

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    M = D**2*T*math.pi*P/4
NameError: name 'D' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:10:21) 
-- CODE:
#Quantidade de donuts
d = int(input("Quantidade de donuts: "))
ovo = 2/12
leite = 150
far = 120
a  = d * ovo
print(a)
-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:11:01) 
-- CODE:
#Quantidade de donuts
d = int(input("Quantidade de donuts: "))
ovo = 2/12
leite = 150/12
far = 120
a  = d * ovo
b = d * leite
print(a)
print(b)
-- OUTPUT:
4.0
300.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:11:34) 
-- CODE:
#Quantidade de donuts
d = int(input("Quantidade de donuts: "))
ovo = 2/12
leite = 150/12
far = 120/12
a  = d * ovo
b = d * leite
c = c * far
print(a)
print(b)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    c = c * far
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:11:41) 
-- CODE:
#Quantidade de donuts
d = int(input("Quantidade de donuts: "))
ovo = 2/12
leite = 150/12
far = 120/12
a  = d * ovo
b = d * leite
c = d * far
print(a)
print(b)
print(c)
-- OUTPUT:
4.0
300.0
240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:11:45) 
-- CODE:
#Quantidade de donuts
d = int(input("Quantidade de donuts: "))
ovo = 2/12
leite = 150/12
far = 120/12
a  = d * ovo
b = d * leite
c = d * far
print(a)
print(b)
print(c)
-- EXECUTION TIME:
0.152567
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:
4.0
300.0
240.0
-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:
1.0
75.0
60.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
